# WavGen

./: .gitignore  .timetracker  CMakeLists.txt  Makefile  README.md  example.cpp  wavgen.cpp  wavgen.h
.github/workflows/: tests.yaml
include/: constants.hpp  wav_gen.hpp
src/: constants.hpp  file.hpp  generator.cpp  header.cpp  wav_file.hpp  wav_file_reader.cpp  wav_file_writer.cpp
tests/: CMakeLists.txt  generator_test.cpp  header_test.cpp  wav_file_reader_test.cpp  wav_file_test.cpp  wav_file_writer_test.cpp
